projekt-compiler/test/misc/unsorted/success/s_multi_use_append.rail
$'main'(--):
 \
  \
   \
    \
     \
      \
       \        #
        \       |
         \      |
          ----[append]---(!app!)--\
                |                 |
                \-----[em]--(ppa)-/

result:

"appendme"
