projekt-compiler/test/misc/unsorted/fail/s_simplest_func (8).rail
$'main'(--):
 \
  \
   \
    \
     \
      \
       \       #
        \      |
         \     |
          ----[b]---(!b!)--\
               |           |
               \-----(b)---/

Crash custom error : b